# agentfi

./: .env.example  .gitignore  CHANGELOG.md  CHECKLIST.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOY.md  Dockerfile.admin  Dockerfile.backend  Dockerfile.mcp  GEMINI.md  HANDOFF.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  STATE.md  VISION.md  agentfi-claude-code-prompt.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  nixpacks.toml  package-lock.json  package.json  pyproject.toml  railway.json  requirements.txt
.claude/: launch.json  settings.json  settings.local.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy-production.yml  deploy-staging.yml  e2e-testnet-smoke.yml
agentfi/: __init__.py  agent.py  cli.py  tools.py
agentfi.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
docs/: README.md  STANDARDS.md  a2a-interoperability.md  agent-quickstart.md  api-reference.md  architecture.md  como-depositar-na-base.md  deploy-contracts.md  dev-quickstart.md  llms.txt  production-release-runbook.md  release-go-no-go-template.md
docs/_archive/: README.md  go-live-status-v0.1.0.md
docs/agents/: claude-instructions.md
docs/api/: openapi.yaml
docs/architecture/: overview.md
docs/operations/: contract-deployment.md  funding-wallets.md  production-deploy.md  release-runbook.md  setup-checklist.md
infra/: nginx.conf
scripts/: check-production-deploy-env.mjs  check-spec-drift.mjs  gen-release-note.mjs  gen-secrets.sh  preflight.ts  release-v1.mjs  run-deploy-preflight-scenarios.mjs  setup-server.sh
tests/: test_agent.py  test_cli.py  test_tools.py
(+14 files in other folders)
