[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentfi"
version = "0.1.0"
description = "AI-powered financial analysis agent"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["finance", "agent", "AI", "stocks", "LLM"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "yfinance>=0.2",
    "requests>=2.28",
]

[project.optional-dependencies]
llm = ["openai>=1.0"]
dev = ["pytest>=8", "pytest-mock>=3"]

[project.scripts]
agentfi = "agentfi.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["agentfi*"]
