[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentfi"
version = "0.1.0"
description = "An AI-powered financial analysis agent"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["finance", "stocks", "ai", "agent", "openai"]
dependencies = [
    "openai>=1.0.0",
    "yfinance>=0.2.40",
    "click>=8.1.0",
]

[project.scripts]
agentfi = "agentfi.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agentfi*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
